--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
           <div>TypesScript</div>
           <div>Vue - Vuetify, Vee-validate, Vuex, Vue-i18n</div>
           <div>React - Gatsby, React App, Next.js, Redux, Formik, Yup, Apollo client, Apollo state, Gutenberg</div>
-          <div>Express.js - Apollo serve, Type-graphql, Type-orm</div>
+          <div>Express.js - Apollo server, Type-graphql, Type-orm</div>
           <div>Ostatní - Moment.js, Popmotion, Framer Motion, Babel, Eslint, Prettier, Gulp, Yarn workspaces</div>
         </div>
 
